--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
                 <div class="col-md-6">
                     <!-- Use PNG image for avatar with background overlay -->
                     <div class="avatar-overlay">
-                        <img src="images/Passport size dhruv.jpg" alt="Avatar">
+                        <img src="Passport size dhruv.jpg" alt="Avatar">
                     </div>
                 </div>
             </div>
